<resources>
    <string name="app_name">Hungry Hive</string>
    <string name="imageLogo">imageLogo</string>
    <string name="app_name_sub_title">(Admin Dashboard)</string>
    <string name="adminLogin">Login</string>
    <string name="adminLoginTitle">To Admin Dashboard</string>
    <string name="adminEmail">E-Mail</string>
    <string name="adminPassword">Password</string>
    <string name="adminForgetPassword">Forget Password</string>
    <string name="adminLoginWith">Or Login With</string>
    <string name="facebook_button">Facebook Button</string>
    <string name="google_button">Google Button</string>
    <string name="pending_order">Pending\nOrder</string>
    <string name="completed_order">Completed\nOrder</string>
    <string name="earning">Total\nEarning</string>
    <string name="default_web_client_id">514624847078-slkp6j281nnvflletutt4f5dtqmvh38i</string>

</resources>