<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_250sdp"
        android:contentDescription="@string/imageLogo"
        android:layout_marginTop="@dimen/_160sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_2" />

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/orbitron"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textSize="@dimen/_35ssp"
        android:letterSpacing=".1"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textViewAppSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_sub_title"
        android:fontFamily="@font/orbitron"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textSize="@dimen/_25ssp"
        android:letterSpacing=".1"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@+id/textViewAppName"
        app:layout_constraintStart_toStartOf="@+id/textViewAppName"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppName" />


</androidx.constraintlayout.widget.ConstraintLayout>